--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "fs": "^0.0.1-security",
+    "gsap": "^3.10.3",
     "method-override": "^3.0.0",
     "nodemon": "^2.0.15",
     "uuid": "^8.3.2"
